  * Prevent spurious hotkey grabs on window create
  * Add a fake_keypress() to scripting keyboard class to send events using xtest
  * Fix bug where word characters were not detected correctly in non-English locales
  * Always prompt before deleting anything
  * [kde] Improve treewidget behaviour when creating phrases/scripts
  * Flush generated keyboard events before ungrabbing the keyboard

 -- Chris Dekter <cdekter@gmail.com>  Tue, 13 Apr 2010 20:26:12 +1000

autokey (0.70.0-0~karmic) karmic; urgency=low

  * Persist configuration using json instead of pickle
  * Make hotkeys exclusive - prevent other applications from receiving them
  * Hotkeys are grabbed globally if they have no filter
  * Hotkeys are grabbed only in matching windows if they have a filter
  * Grab keyboard while sending strings to prevent user-typed input mixing with output
  * Fix problem where hotkeys with backspace, tab and enter would not work
  * Improve window name determination
  * Build a map of modifier masks
  * Use modifier masks to correctly emit modified keys instead of using Xtest

 -- Chris Dekter <cdekter@gmail.com>  Fri, 9 Apr 2010 20:26:12 +1000

autokey (0.61.7-0~karmic) karmic; urgency=low

  * Fix incorrect reference to instance variable in KDE version
  * Fix incorrect method signature in KeyGrabber class
  * ConfigManager uses version from common.py now

 -- Chris Dekter <cdekter@gmail.com>  Tue, 30 Mar 2010 21:30:52 +1000

autokey (0.61.6-0~karmic) karmic; urgency=low

  * Fix problem with autostart in GTK version - issue #27
  * Allow system.exec_command to be used with long-running processes
  * Fix - hotkey dialog does not re-enable the "Press to set" button after
    cancelling - issue #23
  * Slight improvement to installation instructions
  * Fix - special hotkeys - cannot assign previously cleared hotkey - issue #9
  * Revert status icon for GTK version - it only looked good on one version of
    one distro